Now the user, student and professor class have a field that indicates their type of user